feat: implementar limitación de tasa para autenticación y API, incluyendo excepciones y configuración en producción